# 2DAE10_Gommers_Tijl_GG2_Milestone1

./: CMakeLists.txt
Project/: CMakeLists.txt  main.cpp
Project/shaders/: compile.bat  shader.frag  shader.vert  shader2D.frag  shader2D.vert  shaderDyn.frag  shaderInst.vert
Project/vulkanbase/: Game.cpp  Game.h  Object.cpp  Object.h  Pipeline.cpp  Pipeline.h  Structs.h  Texture.cpp  Texture.h  UniformBufferObject.h  instanceStruct.h  newCamera.cpp  newCamera.h
